Create a normal HTML export.

--- a/src/export_shell.html
+++ b/src/export_shell.html
@@ -4,7 +4,7 @@
 	<meta charset='utf-8' />
 	<meta name='viewport' content='width=device-width, user-scalable=no' />
 	<link id='-gd-engine-icon' rel='icon' type='image/png' href='favicon.png' />
-	<title></title>
+	<title>$GODOT_PROJECT_NAME</title>
 	<style type='text/css'>
 
 		body {
@@ -143,7 +143,7 @@
 		<!-- NOTE: THIS WAS CHANGED FROM THE DEFAULT GODOT TEMPLATE. -->
 		<div id="status-title" style="display: none;">
 			<img src="logo.png"
-				 alt="Momma Duck" />
+				 alt="$GODOT_PROJECT_NAME" />
 		</div>
 		<!-- NOTE: THIS WAS CHANGED FROM THE DEFAULT GODOT TEMPLATE. -->
 		<!-- <div id='status-progress' style='display: none;' oncontextmenu='event.preventDefault();'><div id ='status-progress-inner'></div></div> -->
